--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-tooltip": "^5.22.0",
     "web-vitals": "^2.1.4"
   },
