--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontend_react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@sanity/client": "^6.7.0",
