--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/node": "^5.5.0",
     "framer-motion": "^10.16.4",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
