--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/node": "^5.5.0",
     "framer-motion": "^10.16.4",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -52,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "sass": "^1.93.2"
   }
 }
